--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Home Page - NetGether</title>
-	<link rel="stylesheet" href="../wwwroot/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="../wwwroot/css/bootstrap_yeti_theme.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
 
@@ -25,15 +25,15 @@
 					<div class="collapse navbar-collapse" id="navbarColor01">
 						<ul class="navbar-nav me-auto">
 							<li class="nav-item">
-								<a class="nav-link text-dark" onclick="window.location-'index.html';">Home</a>
+								<a class="nav-link text-dark" onclick="location.href='index.html';">Home</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav me-sm2">
 							<li class="nav-item fw-bold">
-								<a class="nav-link" onclick="window.location-'sign_up.html';">Sign Up</a>
+								<a class="nav-link" onclick="location.href='sign_up.html';">Sign Up</a>
 							</li>
 							<li class="nav-item fw-bold">
-								<a class="nav-link" onclick="window.location-'sign_in.html';">Sign In</a>
+								<a class="nav-link" onclick="location.href='sign_in.html';">Sign In</a>
 							</li>
 						</ul>
 						<form class="d-flex">
@@ -61,8 +61,8 @@
 					</div>
 
 					<div class="lc-block d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-						<a class="btn btn-primary btn-lg px-4 gap-3" role="button" onclick="window.location-'sign_up.html';">Sign Up</a>
-						<a class="btn btn-outline-secondary btn-lg px-4" role="button" onclick="window.location='sign_in.html';">Log In</a>
+						<a class="btn btn-primary btn-lg px-4 gap-3" role="button" onclick="location.href='sign_up.html';">Sign Up</a>
+						<a class="btn btn-outline-secondary btn-lg px-4" role="button" onclick="location.href='sign_in.html';">Log In</a>
 					</div>
 					<div class="lc-block d-grid gap-2 d-sm-flex justify-content-sm-center">
 						<img class="img-fluid" src="../wwwroot/img/bg_home_page.avif" srcset="" sizes="" alt=""
