--- a/home/sign_up.html
+++ b/home/sign_up.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up - NetGether</title>
-    <link rel="stylesheet" href="../wwwroot/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../wwwroot/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../wwwroot/css/bootstrap_yeti_theme.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
 
@@ -14,36 +14,36 @@
 <body>
     <main>
         <header>
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-				<div class="container-fluid">
-					<a class="navbar-brand" href="#">NetGether</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-						data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
-						aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarColor01">
-						<ul class="navbar-nav me-auto">
-							<li class="nav-item">
-								<a class="nav-link text-dark" onclick="window.location-'index.html';">Home</a>
-							</li>
-						</ul>
-						<ul class="navbar-nav me-sm2">
-							<li class="nav-item fw-bold">
-								<a class="nav-link" onclick="window.location-'sign_up.html';">Sign Up</a>
-							</li>
-							<li class="nav-item fw-bold">
-								<a class="nav-link" onclick="window.location-'log_in.html';">Sign In</a>
-							</li>
-						</ul>
-						<form class="d-flex">
-							<input class="form-control me-sm-2" type="search" placeholder="Search">
-							<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-						</form>
-					</div>
-				</div>
-			</nav>
-		</header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">NetGether</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarColor01">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" onclick="location.href='index.html';">Home</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav me-sm2">
+                            <li class="nav-item fw-bold">
+                                <a class="nav-link" onclick="location.href='sign_up.html';">Sign Up</a>
+                            </li>
+                            <li class="nav-item fw-bold">
+                                <a class="nav-link" onclick="location.href='sign_in.html';">Sign In</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-sm-2" type="search" placeholder="Search">
+                            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </header>
         <div class="container">
             <section class="h-100 gradient-form" style="background-color: #eee;">
                 <div class="container py-5 h-100">
@@ -59,7 +59,7 @@
                                                     alt="logo">
                                                 <h4 class="mt-1 mb-5 pb-1">We are <b>NetGether</b></h4>
                                             </div>
-                                            <form method="post">
+                                            <form method="POST" id="signUp">
                                                 <p>Create account</p>
 
                                                 <div class="form-outline mb-4">
@@ -77,10 +77,13 @@
 
                                                 <div class="text-center pt-1 mb-5 pb-1">
                                                     <button type="submit"
-                                                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3">
+                                                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                                        onClick="signUpF()">
                                                         Create now
                                                     </button>
                                                 </div>
+
+
                                             </form>
                                         </div>
                                     </div>
@@ -106,6 +109,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script>
+        function signUpF() {
+            window.location.href = "index.html";
+        }
+    </script>
 </body>
 
 </html>
