--- a/home/sign_up.html
+++ b/home/sign_up.html
@@ -59,7 +59,7 @@
                                                     alt="logo">
                                                 <h4 class="mt-1 mb-5 pb-1">We are <b>NetGether</b></h4>
                                             </div>
-                                            <form method="POST" id="signUp">
+                                            <form method="post" id="signUp" action="../room/chatroom.html">
                                                 <p>Create account</p>
 
                                                 <div class="form-outline mb-4">
@@ -77,8 +77,7 @@
 
                                                 <div class="text-center pt-1 mb-5 pb-1">
                                                     <button type="submit"
-                                                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                        onClick="signUpF()">
+                                                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3">
                                                         Create now
                                                     </button>
                                                 </div>
@@ -109,11 +108,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script>
-        function signUpF() {
-            window.location.href = "index.html";
-        }
-    </script>
 </body>
 
 </html>
