Added input type in forms and corrected css

--- a/home/sign_in.html
+++ b/home/sign_in.html
@@ -36,10 +36,6 @@
                                 <a class="nav-link" onclick="location.href='sign_in.html';">Sign In</a>
                             </li>
                         </ul>
-                        <form class="d-flex">
-                            <input class="form-control me-sm-2" type="search" placeholder="Search">
-                            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                        </form>
                     </div>
                 </div>
             </nav>
@@ -66,14 +62,14 @@
 
                                                 <div class="form-outline mb-4">
                                                     <label>Username</label>
-                                                    <input id="form2Example11" class="form-control"
+                                                    <input id="form2Example11" class="form-control" type="name"
                                                         placeholder="Enter username" />
                                                     <span class="text-danger"></span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label>Password</label>
-                                                    <input id="form2Example22" class="form-control" />
+                                                    <input id="form2Example22" class="form-control" type="password" />
                                                     <span class="text-danger"></span>
                                                 </div>
 
