--- a/room/chatroom.html
+++ b/room/chatroom.html
@@ -18,7 +18,8 @@
             <a href="#"></a>
             <a href="#"></a>
             <a href="#"></a>
-            <a href="../home/index.html" class="btn btn-danger justify-content-center"><i class="bi bi-door-closed">&nbsp; Log
+            <a href="../home/index.html" class="btn btn-danger justify-content-center"><i
+                    class="bi bi-door-closed">&nbsp; Log
                     Out</i></a>
         </div>
         <div id="myChat" class="chat">
