--- a/home/index.html
+++ b/home/index.html
@@ -36,10 +36,6 @@
 								<a class="nav-link" onclick="location.href='sign_in.html';">Sign In</a>
 							</li>
 						</ul>
-						<form class="d-flex">
-							<input class="form-control me-sm-2" type="search" placeholder="Search">
-							<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-						</form>
 					</div>
 				</div>
 			</nav>
@@ -61,8 +57,10 @@
 					</div>
 
 					<div class="lc-block d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-						<a class="btn btn-primary btn-lg px-4 gap-3" role="button" onclick="location.href='sign_up.html';">Sign Up</a>
-						<a class="btn btn-outline-secondary btn-lg px-4" role="button" onclick="location.href='sign_in.html';">Log In</a>
+						<a class="btn btn-primary btn-lg px-4 gap-3" role="button"
+							onclick="location.href='sign_up.html';">Sign Up</a>
+						<a class="btn btn-outline-secondary btn-lg px-4" role="button"
+							onclick="location.href='sign_in.html';">Log In</a>
 					</div>
 					<div class="lc-block d-grid gap-2 d-sm-flex justify-content-sm-center">
 						<img class="img-fluid" src="../wwwroot/img/bg_home_page.avif" srcset="" sizes="" alt=""
